--- a/Bakery/Views/Flavors/AddCategory.cshtml
+++ b/Bakery/Views/Flavors/AddCategory.cshtml
@@ -2,18 +2,18 @@
   Layout = "_Layout";
 }
 
-@model Bakery.Models.Item
+@model Bakery.Models.Flavor
 
-<h2>Add a category</h2>
+<h2>Add a treat</h2>
 
-<h4>Add a category to this task: @Html.DisplayFor(model => model.Description)</h4>
+<h4>Add a treat to this task: @Html.DisplayFor(model => model.Description)</h4>
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.ItemId)
+    @Html.HiddenFor(model => model.FlavorId)
 
-    @Html.Label("Select category")
-    @Html.DropDownList("CategoryId")
+    @Html.Label("Select treat")
+    @Html.DropDownList("TreatId")
 
     <input type="submit" value="Save" />
 }
