--- a/Bakery/Views/Flavors/Delete.cshtml
+++ b/Bakery/Views/Flavors/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model Bakery.Models.Flavor
 
 <h2>Are you sure you want to delete this?</h2>
 
