--- a/Bakery/Views/Flavors/Details.cshtml
+++ b/Bakery/Views/Flavors/Details.cshtml
@@ -2,26 +2,26 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model Bakery.Models.Flavor
 
-<h2>Item Details</h2>
+<h2>Flavor Details</h2>
 <hr />
 <h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
 
-@if(@Model.Categories.Count == 0)
+@if(@Model.Treats.Count == 0)
 {
-  <p>This item does not belong to any categories</p>
+  <p>This flavor does not belong to any treats</p>
 }
 else
 {
-  <h4>Categories the item belongs to:</h4>
+  <h4>Treats the flavor belongs to:</h4>
   <ul>
-  @foreach(var join in Model.Categories)
+  @foreach(var join in Model.Treats)
   {
-    <li>@join.Category.Name</li>
-    @using (Html.BeginForm("DeleteCategory", "Items"))
+    <li>@join.Treat.Name</li>
+    @using (Html.BeginForm("DeleteTreat", "Flavors"))
     {
-      @Html.Hidden("joinId", @join.CategoryItemId)
+      @Html.Hidden("joinId", @join.TreatFlavorId)
       <input type="submit" value="Delete"/>
     }
   }
@@ -29,6 +29,6 @@ else
 }
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
-<p>@Html.ActionLink("Edit Item", "Edit", new { id = Model.ItemId })</p>
-<p>@Html.ActionLink("Add a Category", "AddCategory", new { id = Model.ItemId })</p>
-<p>@Html.ActionLink("Delete Item", "Delete", new { id = Model.ItemId })</p>
+<p>@Html.ActionLink("Edit Flavor", "Edit", new { id = Model.FlavorId })</p>
+<p>@Html.ActionLink("Add a Treat", "AddTreat", new { id = Model.FlavorId })</p>
+<p>@Html.ActionLink("Delete Flavor", "Delete", new { id = Model.FlavorId })</p>
