--- a/Bakery/Views/Flavors/Edit.cshtml
+++ b/Bakery/Views/Flavors/Edit.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model Bakery.Models.Flavor
 
 <h2>Edit</h2>
 
@@ -10,13 +10,13 @@
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.ItemId)
+    @Html.HiddenFor(model => model.FlavorId)
 
     @Html.LabelFor(model => model.Description)
     @Html.EditorFor(model => model.Description)
 
-    @Html.Label("Select category")
-    @Html.DropDownList("CategoryId")
+    @Html.Label("Select treat")
+    @Html.DropDownList("TreatId")
 
     <input type="submit" value="Save" />
 }
