--- a/Bakery/Views/Home/Index.cshtml
+++ b/Bakery/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome to the To Do List!</h1>
-<p>@Html.ActionLink("See all categories", "Index", "Categories")</p>
-<p>@Html.ActionLink("See all items", "Index", "Items")</p>
+<h1>Welcome to the Bakery!</h1>
+<p>@Html.ActionLink("See all treats", "Index", "Treats")</p>
+<p>@Html.ActionLink("See all flavors", "Index", "Flavors")</p>
 <p>@Html.ActionLink("Create an account", "Index", "Account")</p>
