--- a/Bakery/Views/Treats/Index.cshtml
+++ b/Bakery/Views/Treats/Index.cshtml
@@ -3,18 +3,23 @@
 }
 
 @using Bakery.Models;
-@model List<Bakery.Models.Treat>;
+@using System.Security.Claims
+@model IEnumerable<Bakery.Models.Treat>
 
-<h1>Treats</h1>
+<h1>Treats for @User.Identity.Name</h1>
 
-@if (@Model.Count == 0)
+@if (Model.Any())
+{
+  <ul>
+    @foreach (Treat treat in Model)
+    {
+      <li>@Html.ActionLink($"{treat.Name}", "Details", new { id = treat.TreatId })</li>
+    }
+  </ul>
+} 
+else
 {
   <h3>No treats have been added yet!</h3>
-} 
-
-@foreach (Treat treat in Model)
-{
-  <li>@Html.ActionLink($"{treat.Name}", "Details", new { id = treat.TreatId })</li>
 }
 
 <p>@Html.ActionLink("Add new treat", "Create")</p>
