--- a/Bakery/Views/Treats/Index.cshtml
+++ b/Bakery/Views/Treats/Index.cshtml
@@ -7,7 +7,7 @@
 @model IEnumerable<Bakery.Models.Treat>
 
 <h1>Treats for @User.Identity.Name</h1>
-
+<h1>Treats </h1>
 @if (Model.Any())
 {
   <ul>
