--- a/Bakery/Views/Treats/Details.cshtml
+++ b/Bakery/Views/Treats/Details.cshtml
@@ -10,19 +10,27 @@
 
 @if(@Model.Flavors.Count == 0)
 {
-  <p>This treat does not contain any flavors</p>
+  <p>This treat does not belong to any flavors</p>
 }
 else
 {
-  <h4>Flavors the treat contains:</h4>
+  <h4>Flavors the treat belongs to:</h4>
   <ul>
   @foreach(var join in Model.Flavors)
   {
     <li>@join.Flavor.Description</li>
+     @using (Html.BeginForm("DeleteFlavor", "Treats"))
+   {
+      @Html.Hidden("joinId", @join.TreatFlavorId)
+      <input type="submit" value="Delete"/>
+    }
   }
   </ul>
 }
 
 <p>@Html.ActionLink("Back to treats", "Index")</p>
 <p>@Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatId })</p>
+
+<p>@Html.ActionLink("Add a Flavor", "AddFlavor", new { id = Model.TreatId })</p>
+
 <p>@Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatId })</p>
