--- a/Bakery/Views/Treats/Details.cshtml
+++ b/Bakery/Views/Treats/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Treat Details</h2>
 <hr/>
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
+<h3>@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)</h3>
 
 @if(@Model.Flavors.Count == 0)
 {
@@ -30,7 +30,5 @@ else
 
 <p>@Html.ActionLink("Back to treats", "Index")</p>
 <p>@Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatId })</p>
-
-<p>@Html.ActionLink("Add a Flavor", "AddFlavor", new { id = Model.TreatId })</p>
-
+<p>@Html.ActionLink("Add a Flavor", "AddFlavor", new { id = Model.FlavorId })</p>
 <p>@Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatId })</p>
