--- a/Bakery/Views/Treats/AddFlavor.cshtml
+++ b/Bakery/Views/Treats/AddFlavor.cshtml
@@ -6,16 +6,23 @@
 
 <h2>Add a flavor</h2>
 
-<h4>Add a flavor to this treat: @Html.DisplayFor(model => model.Name)</h4>
+<h4>Add a flavor to this treat: @Html.DisplayFor(model => model.Description)</h4>
 
 @using (Html.BeginForm())
 {
     @Html.HiddenFor(model => model.TreatId)
 
+    
     @Html.Label("Select flavor")
     @Html.DropDownList("FlavorId")
-
+    
+    
     <input type="submit" value="Save" />
 }
+<p>@Html.ActionLink("Back to treats", "Index")</p>
+    
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
+    
+    
+    
+    
