--- a/Bakery/Views/Treats/Details.cshtml
+++ b/Bakery/Views/Treats/Details.cshtml
@@ -30,5 +30,5 @@ else
 
 <p>@Html.ActionLink("Back to treats", "Index")</p>
 <p>@Html.ActionLink("Edit Treat", "Edit", new { id = Model.TreatId })</p>
-<p>@Html.ActionLink("Add a Flavor", "AddFlavor", new { id = Model.FlavorId })</p>
+<p>@Html.ActionLink("Add a Flavor", "AddFlavor", new { id = Model.TreatId })</p>
 <p>@Html.ActionLink("Delete Treat", "Delete", new { id = Model.TreatId })</p>
